# flask-project

./: .gitignore  README.md  alembic.ini  pyproject.toml
app/: main.py
app/apis/: config.py  containers.py  repositories.py  routers.py
app/apis/config/: database.py  settings.py
app/apis/user/: container.py  routers.py  schemas.py  service.py
app/core/authentication/: contants.py  tokens.py
app/core/models/: user.py
app/core/models/migrations/: env.py
app/core/models/migrations/versions/: 1ff5d2021596_create_inital_tables.py  672ab27fe0d8_create_inital_tables_user.py
app/core/utils/: datetime.py
