[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Le Xuan Manh <lexuanmanh101199@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.99.1"
dependency-injector = "^4.41.0"
python-dotenv = "^1.0.0"
redbird = "^0.7.1"
uvicorn = "^0.22.0"
SQLAlchemy = "^2.0.17"
alembic = "^1.11.1"
pymysql = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
